--- a/src/xEasyApp.Web/Views/SysManage/RoleInfoList.cshtml
+++ b/src/xEasyApp.Web/Views/SysManage/RoleInfoList.cshtml
@@ -16,6 +16,14 @@
             margin-left:5px;           
             display:block;
         }
+        .sysrole .bbit-tree-node-icon
+        {
+        	 background-image:url("../../statics/images/icons/sysrole.png");
+        }
+        .normalrole .bbit-tree-node-icon
+        {
+        	background-image:url("../../statics/images/icons/normalrole.png") ;
+        }
     </style>
 </head>
 <body>
@@ -61,7 +69,7 @@
                     { display: '角色类型', name: 'IsSystem', width: 120, sortable: false, hide: false, align: 'left', process: formatType },
                     { display: '最后一次更新人', name: 'LastUpdateUserName', width: 100, sortable: false, hide: true, align: 'left' },
                     { display: '最后一次更新时间', name: 'LastUpdateTime', width: 120, sortable: false, hide: true, align: 'left' },
-                    { display: '操作', name: 'RoleID', width: 120, sortable: false, align: 'left', process: formatOp, toggle: false }
+                    { display: '操作', name: 'RoleID', width: 210, sortable: false, align: 'left', process: formatOp, toggle: false }
 				],
                 buttons: [
                             { name: 'Add', displayname: "新建", title: "新建权限", bclass: 'Add', onpress: toolbarItem_onclick },
@@ -106,6 +114,8 @@
                     a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:edit('", value, "')\"><span class='edit' title='编辑'>编辑</span></a>&nbsp;");
                     a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:del('", value, "','", cell[1], "')\"><span class='delete' title='删除'>删除</span></a>&nbsp;");
                 }
+                a.push("<a  class='imgbtn2' href=\"javascript:viewUsers('", value, "','", cell[2], "')\" title='查看角色下的成员' class='linkbtn'><span class='user'>成员</span></a>&nbsp;");
+                a.push("<a  class='imgbtn2' href=\"javascript:authorization('", value, "','", cell[2], "')\" title='授权' class='linkbtn'><span class='authorization'>授权</span></a>");
                 return a.join("");
             }
             function toolbarItem_onclick(cmd, grid) {
@@ -137,6 +147,17 @@
                 "json"
                 );
             }
+        }
+        function viewUsers(roleID, roleName) {
+            var url = "@Url.Action("RoleUserRelationList")?RoleID=" + encodeURIComponent(roleID);
+            OpenModelWindow(url, { caption: roleName + " 下的成员", width: 500, height: 400 });
+        }
+        function authorization(roleID, roleName) {
+            var url = "@Url.Action("SetRolePrivilege")?RoleID=" + encodeURIComponent(roleID);
+            OpenModelWindow(url, { caption: "对角色[" + roleName + "]授权", width: 300, height: 400, type: 2, onclose: function () {
+                showLoadingMsg("操作成功！", { left: 300, top: 1 }, true, 3000);
+            } 
+            });
         }
         function edit(roleId) {
             OpenModelWindow('@Url.Action("EditRole")/' + roleId, { width: 470, height: 370, caption: "修改角色信息", onclose: function () { showLoadingMsg("修改成功", { left: 300, top: 2 }, true, 3000); refresh(); } });
